Added City entity and FK with user

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -150,6 +150,12 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/entities/ciudad/ciudad.js"></script>
+    <script src="scripts/app/entities/ciudad/ciudad.controller.js"></script>
+    <script src="scripts/app/entities/ciudad/ciudad-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ciudad/ciudad-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ciudad/ciudad-detail.controller.js"></script>
+    <script src="scripts/components/entities/ciudad/ciudad.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
