Creadas relaciones Ciudad Usuario

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -156,6 +156,8 @@
     <script src="scripts/app/entities/ciudad/ciudad-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/ciudad/ciudad-detail.controller.js"></script>
     <script src="scripts/components/entities/ciudad/ciudad.service.js"></script>
+    <script src="bower_components/messageformat/locale/ca.js"></script>
+    <script src="bower_components/messageformat/locale/es.js"></script>
     <!-- endbuild -->
 </body>
 </html>
