Creadas las entidades Categoria y Producto con sus relaciones

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -158,6 +158,18 @@
     <script src="scripts/components/entities/ciudad/ciudad.service.js"></script>
     <script src="bower_components/messageformat/locale/ca.js"></script>
     <script src="bower_components/messageformat/locale/es.js"></script>
+    <script src="scripts/app/entities/categoria/categoria.js"></script>
+    <script src="scripts/app/entities/categoria/categoria.controller.js"></script>
+    <script src="scripts/app/entities/categoria/categoria-dialog.controller.js"></script>
+    <script src="scripts/app/entities/categoria/categoria-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/categoria/categoria-detail.controller.js"></script>
+    <script src="scripts/components/entities/categoria/categoria.service.js"></script>
+    <script src="scripts/app/entities/producto/producto.js"></script>
+    <script src="scripts/app/entities/producto/producto.controller.js"></script>
+    <script src="scripts/app/entities/producto/producto-dialog.controller.js"></script>
+    <script src="scripts/app/entities/producto/producto-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/producto/producto-detail.controller.js"></script>
+    <script src="scripts/components/entities/producto/producto.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
