Creadas las entidades Anuncio y Opinión.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -170,6 +170,18 @@
     <script src="scripts/app/entities/producto/producto-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/producto/producto-detail.controller.js"></script>
     <script src="scripts/components/entities/producto/producto.service.js"></script>
+    <script src="scripts/app/entities/anuncio/anuncio.js"></script>
+    <script src="scripts/app/entities/anuncio/anuncio.controller.js"></script>
+    <script src="scripts/app/entities/anuncio/anuncio-dialog.controller.js"></script>
+    <script src="scripts/app/entities/anuncio/anuncio-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/anuncio/anuncio-detail.controller.js"></script>
+    <script src="scripts/components/entities/anuncio/anuncio.service.js"></script>
+    <script src="scripts/app/entities/opinion/opinion.js"></script>
+    <script src="scripts/app/entities/opinion/opinion.controller.js"></script>
+    <script src="scripts/app/entities/opinion/opinion-dialog.controller.js"></script>
+    <script src="scripts/app/entities/opinion/opinion-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/opinion/opinion-detail.controller.js"></script>
+    <script src="scripts/components/entities/opinion/opinion.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
