--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -77,8 +77,8 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Ciudad</label>
-            <select class="form-control" name="ciudad_id" ng-model="user.ciudad"
+            <label translate="user-management.ciudad">City</label>
+            <select class="form-control" name="ciudad" ng-model="user.ciudad"
                     ng-options="ciudad as ciudad.nombre for ciudad in ciudads track by ciudad">
             </select>
         </div>
