--- a/src/main/webapp/scripts/app/admin/user-management/user-management.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management.html
@@ -17,7 +17,7 @@
                 <th translate="global.field.id">ID</th>
                 <th translate="user-management.login">Login</th>
                 <th translate="user-management.email">Email</th>
-                <th transalte="user-management.ciudad_id">Ciudad</th>
+                <th transalte="user-management.ciudad">City</th>
                 <th translate="user-management.langKey">LangKey</th>
                 <th translate="user-management.profiles">Profiles</th>
                 <th translate="user-management.createdDate">CreatedDate</th>
@@ -31,7 +31,7 @@
                 <td><a ui-sref="user-management-detail({login:user.login})">{{user.id}}</a></td>
                 <td>{{user.login}}</td>
                 <td>{{user.email}}</td>
-                <td>{{user.ciudad}}</td>
+                <td>{{user.ciudad.nombre}}</td>
                 <td>
                     <span class="label label-danger" ng-click="setActive(user, true)" ng-show="!user.activated"
                           translate="user-management.deactivated" style="cursor: pointer;">Desactivated</span>
