--- a/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-detail.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
                 <td>
-                    <span translate="user-management.ciudad_id">Ciudad</span>
+                    <span translate="user-management.ciudad">City</span>
                 </td>
                 <td>
                     <input type="text" class="input-sm form-control" value="{{user.ciudad}}" readonly>
