--- a/src/main/webapp/scripts/app/entities/producto/producto-dialog.html
+++ b/src/main/webapp/scripts/app/entities/producto/producto-dialog.html
@@ -37,9 +37,8 @@
         </div>
         <div class="form-group">
             <label class="control-label" translate="plumbeerApp.producto.descripcion" for="field_descripcion">Descripcion</label>
-            <input type="text" class="form-control" name="descripcion" id="field_descripcion"
-                    ng-model="producto.descripcion"
-                     />
+                <textarea class="form-control" name="descripcion" id="field_descripcion"
+                    ng-model="producto.descripcion"  />
         </div>
         <div class="form-group" ngf-drop ngf-change="setFoto($file, producto)" ngf-pattern="'image/*'">
             <label class="control-label" translate="plumbeerApp.producto.foto" for="field_foto">Foto</label>
