Usuario guarda ciudad_id

--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -79,7 +79,7 @@
         <div class="form-group">
             <label translate="user-management.ciudad">City</label>
             <select class="form-control" name="ciudad" ng-model="user.ciudad"
-                    ng-options="ciudad as ciudad.nombre for ciudad in ciudads track by ciudad">
+                    ng-options="ciudad as ciudad.nombre for ciudad in ciudads track by ciudad.id">
             </select>
         </div>
         <div class="form-group">
