--- a/src/main/webapp/scripts/app/account/register/register.html
+++ b/src/main/webapp/scripts/app/account/register/register.html
@@ -50,6 +50,14 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="control-label" for="firstName" translate="global.form.firstName">First Name</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="{{'global.form.firstName.placeholder' | translate}}" ng-model="registerAccount.firstName">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="lastName" translate="global.form.lastName">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="{{'global.form.lastName.placeholder' | translate}}" ng-model="registerAccount.lastName">
+                </div>
+                <div class="form-group">
                     <label class="control-label" for="email" translate="global.form.email">E-mail</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="{{'global.form.email.placeholder' | translate}}"
                            ng-model="registerAccount.email" ng-minlength=5 ng-maxlength=100 required>
