--- a/src/main/webapp/scripts/app/account/register/register.html
+++ b/src/main/webapp/scripts/app/account/register/register.html
@@ -1,4 +1,170 @@
-<div>
+<style>
+    html,
+    body {
+        height: 100%;
+    }
+
+    html {
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        font-size: 24px;
+    }
+
+    *,
+    *:before,
+    *:after {
+        -moz-box-sizing: inherit;
+        box-sizing: inherit;
+    }
+
+    body {
+        margin: 0;
+        line-height: 1.5;
+        background-color: #e7e7e7;
+        font-family: Roboto, Helvectica, Arial, sans-serif;
+        color: #333;
+    }
+
+
+    /* headers */
+
+    h1 {
+        font-family: "Roboto Slab", Times, "Times New Roman", serif;
+        font-size: 2em;
+    }
+
+
+    /* form elements */
+
+    label {
+        display: block;
+    }
+
+    select,
+    textarea,
+    input {
+        max-width: 100%;
+        padding: 0;
+        margin: 0;
+        font-family: inherit;
+        font-weight: inherit;
+        font-size: inherit;
+        color: inherit;
+    }
+
+    input[type=submit] {
+        cursor: pointer;
+    }
+
+
+    /* vertical align snippet */
+
+    .va-cont {
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+        height: 100%;
+    }
+
+    .va-inn {
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+
+    /* styles */
+
+    .form-container {
+        width: 80%;
+        padding: 10px;
+        margin: auto;
+    }
+
+    .form-heading {
+        margin-top: 0;
+        margin-bottom: 1.2em;
+        text-align: center;
+    }
+
+    .form-heading-highlight {
+        color: #009688;
+    }
+
+    .form-row {
+        position: relative;
+        margin-top: 30px;
+    }
+
+    .form-label {
+        position: absolute;
+        top: 17px;
+        left: 20px;
+        color: #999;
+        cursor: text;
+        transition: all .15s ease-in-out 0s;
+    }
+
+    .form-textbox,
+    .form-submit {
+        width: 100%;
+        padding: 20px;
+        border: none;
+    }
+
+    .form-textbox:focus ~ .form-label,
+    .form-textbox:valid ~ .form-label {
+        top: -1.5em;
+        left: 0;
+        font-size: .8em;
+        color: inherit;
+        cursor: pointer;
+    }
+
+    .form-submit {
+        background-color: #009688;
+        color: #fff;
+        transition: opacity .15s ease-in-out 0s;
+    }
+
+    .form-submit:hover {
+        opacity: .75;
+    }
+
+
+    /* media queries */
+
+    @media only screen and (max-width:1366px) {
+        .form-container {
+            width: 70%;
+        }
+    }
+
+    @media only screen and (max-width:1024px) {
+        body {
+            font-size: .85em;
+        }
+        .form-container {
+            width: 80%;
+        }
+    }
+
+    @media only screen and (max-width:768px) {
+        body {
+            font-size: .7em;
+        }
+        .form-container {
+            width: 90%;
+        }
+    }
+
+    @media only screen and (max-width:480px) {
+        .form-container {
+            width: 100%;
+        }
+    }
+</style>
+<div class="va-cont">
+    <div class="va-inn">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h1 translate="register.title">Registration</h1>
@@ -123,9 +289,7 @@
                 <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary" translate="register.form.button">Register</button>
             </form>
             <p></p>
-            <div class="alert alert-warning" translate="global.messages.info.authenticated">
-                If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
-            </div>
         </div>
     </div>
+
 </div>
