--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,41 +1,90 @@
+<!-- CSS card flip -->
+<style>
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+    .card-container{
+        perspective: 900px;
+        margin-right: 20px;
+        width: 150px;
+        cursor:pointer;
+    }
+
+    .card{
+        position: relative;
+        width: 100px;
+        height: 100px;
+        transition: all 0.6s ease;
+        transform-style: preserve-3d;
+        cursor:pointer;
+    }
+
+    .front,.back{
+        position: absolute;
+        background: #87CEFA;
+        top: 0;
+        left: 0;
+        width: 100px;
+        height: 100px;
+        border-radius: 5px;
+        color: white;
+        box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
+        backface-visibility: hidden;
+    }
+
+    .front{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+    }
+
+    .back{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+    }
+
+    .card-container:hover .card{
+        transform: rotateY(180deg);
+    }
+
+    .back{
+        transform: rotateY(180deg);
+    }
+
+    .card-container img{
+        width:75px;
+        height:75px;
+    }
+</style>
+<!-- endCSS -->
+
 <div ng-cloak>
     <div class="row">
-        <div class="col-md-4">
-            <span class="hipster img-responsive img-rounded"></span>
-        </div>
-        <div class="col-md-8">
-            <h1 translate="main.title">Welcome, Java Hipster!</h1>
-            <p class="lead" translate="main.subtitle">This is your homepage</p>
-
-            <div ng-switch="isAuthenticated()">
-                <div class="alert alert-success" ng-switch-when="true" translate="main.logged.message" translate-values="{username: '{{account.login}}'}">
-                    You are logged in as user "{{account.login}}".
+        <div class="card-container">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../profile.png"/>
                 </div>
-
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated">
-                    If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
-                </div>
-
-                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.register">
-                    You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
-                </div>
+                <div class="back">Profile</div>
             </div>
-
-            <p translate="main.question">
-                If you have any question on JHipster:
-            </p>
-
-            <ul>
-                <li><a href="http://jhipster.github.io/" target="_blank" translate="main.link.homepage">JHipster homepage</a></li>
-                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" translate="main.link.stackoverflow">JHipster on Stack Overflow</a></li>
-                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" translate="main.link.bugtracker">JHipster bug tracker</a></li>
-                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" translate="main.link.chat">JHipster public chat room</a></li>
-                <li><a href="https://twitter.com/java_hipster" target="_blank"  translate="main.link.contact">contact @java_hipster on Twitter</a></li>
-            </ul>
-
-            <p>
-             <span translate="main.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="main.github">Github</a>!
-            </p>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../shop.png"/>
+                </div>
+                <div class="back">Shop</div>
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../community.png"/>
+                </div>
+                <div class="back">Community</div>
+            </div>
         </div>
     </div>
 </div>
