Eliminado el boton HOME

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -16,6 +16,7 @@
         transition: all 0.6s ease;
         transform-style: preserve-3d;
         cursor:pointer;
+        display: inline-block;
     }
 
     .front,.back{
