--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,9 @@
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
         <!-- endbuild -->
+        <!-- importJQuery-->
+        <script src="jquery-1.9.1.js" type="text/javascript"></script>
+        <!-- endImportJQuery-->
     </head>
     <body ng-app="plumbeerApp">
         <!--[if lt IE 9]>
