--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label translate="user-management.ciudad">City</label>
+            <label translate="user-management.ciudad">Ciudad</label>
             <select class="form-control" name="ciudad" ng-model="user.ciudad"
                     ng-options="ciudad as ciudad.nombre for ciudad in ciudads track by ciudad.id">
             </select>
