--- a/src/main/webapp/scripts/app/admin/user-management/user-management.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management.html
@@ -17,7 +17,7 @@
                 <th translate="global.field.id">ID</th>
                 <th translate="user-management.login">Login</th>
                 <th translate="user-management.email">Email</th>
-                <th transalte="user-management.ciudad">City</th>
+                <th transalte="user-management.ciudad">Ciudad</th>
                 <th translate="user-management.langKey">LangKey</th>
                 <th translate="user-management.profiles">Profiles</th>
                 <th translate="user-management.createdDate">CreatedDate</th>
