--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -60,33 +60,17 @@
     }
 </style>
 <!-- endCSS -->
-<!-- script -->
-<script>
-
-
-
-    $(".card").click(selectAnimation);
-
-    function selectAnimation(){
-        $(".card-container").children().css("height","80px");
-        $(".card-container").children().css("width","80px")
-        $(this).children().css("height","+=40px");
-        $(this).children().css("width","+=40px");
-    }
-
-</script>
-<!-- endScript-->
 <div ng-cloak>
     <div class="row">
-        <div class="card-container">
-            <div class="card">
-                <div class="front">
+        <div class="card-container" class="user">
+            <div class="card" class="user">
+                <div class="front" class="user">
                     <img src="../../../profile.png"/>
                 </div>
-                <div class="back">Profile</div>
+                <div class="back" class="user">Profiles</div>
             </div>
         </div>
-        <div class="card-container">
+        <div class="card-container" id="shop">
             <div class="card">
                 <div class="front">
                     <img src="../../../shop.png"/>
@@ -94,13 +78,23 @@
                 <div class="back">Shop</div>
             </div>
         </div>
-        <div class="card-container">
+        <div class="card-container" id="com">
             <div class="card">
                 <div class="front">
                     <img src="../../../community.png"/>
                 </div>
                 <div class="back">Community</div>
             </div>
+        </div>
+        <div ng-controller="MainController">
+            <table border="1px" style="position:absolute; margin-left:500px; top:20%" id="tableProfiles">
+                <tr  ng-repeat="user in users">
+                    <td>{{user.login}}</td>
+                    <td>{{user.firstName}}</td>
+                    <td>{{user.lastName}}</td>
+                    <td>{{user.ciudad.nombre}}</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
