--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -2,6 +2,36 @@
 <style>
     @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
+    .menu{
+        perspective: 900px;
+        margin-top:25%;
+        margin-left:45%;
+        width: 100px;
+        height: 100px;
+        cursor:pointer;
+        display: inline-block;
+        position: absolute;
+        background: #87CEFA;
+        top: 0;
+        left: 0;
+        border-radius: 50%;
+        box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
+        backface-visibility: hidden;
+    }
+
+    .esfera{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+    }
+
+    .menu img{
+        margin-top:20%;
+        width:60px;
+        height:60px;
+    }
+
     .card-container{
         perspective: 900px;
         margin-right: 20px;
@@ -62,6 +92,11 @@
 <!-- endCSS -->
 <div ng-cloak>
     <div class="row">
+        <div class="menu">
+            <div class="esfera">
+                <img src="../../../menu.png"/>
+            </div>
+        </div>
         <div class="card-container" class="user">
             <div class="card" class="user">
                 <div class="front" class="user">
@@ -86,6 +121,31 @@
                 <div class="back">Community</div>
             </div>
         </div>
+        <div class="card-container" id="post">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../posts.png"/>
+                </div>
+                <div class="back">Your Posts</div>
+            </div>
+        </div>
+        <div class="card-container" id="search">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../search.png"/>
+                </div>
+                <div class="back">Search</div>
+            </div>
+        </div>
+        <div class="card-container" id="logout">
+            <div class="card">
+                <div class="front">
+                    <img src="../../../logout.png"/>
+                </div>
+                <div class="back">Logout</div>
+            </div>
+        </div>
+
         <div ng-controller="MainController">
             <table border="1px" style="position:absolute; margin-left:500px; top:20%; display:none" id="tableProfiles">
                 <tr  ng-repeat="user in users">
