Fondo Login animado, carpetas CSS y JS

--- a/src/main/webapp/indexTrue.html
+++ b/src/main/webapp/indexTrue.html
@@ -14,12 +14,11 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <!-- endbower -->
         <!-- endbuild -->
+        <link rel="stylesheet" href="CSS/flipIndice.css">
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
         <!-- endbuild -->
-        <!-- importJQuery-->
-        <script src="jquery-1.9.1.js" type="text/javascript"></script>
-        <!-- endImportJQuery-->
+        <script src="JS/menuDesplegable.js" type="text/javascript"></script>
     </head>
     <body ng-app="plumbeerApp">
         <!--[if lt IE 9]>
@@ -181,6 +180,6 @@
     <script src="scripts/app/entities/opinion/opinion-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/opinion/opinion-detail.controller.js"></script>
     <script src="scripts/components/entities/opinion/opinion.service.js"></script>
-    <!-- endbuild -->
-</body>
-</html>
+    <!-- endbuild -->'
+    </body>
+    </html>
