--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,17 +1,10 @@
 <link rel="stylesheet" href="loginStyle.css"/>
-<script>
-    $("#login-button").click(function(event){
-        event.preventDefault();
-
-        $('form').fadeOut(500);
-        $('.wrapper').addClass('form-success');
-    });
-</script>
 <div class="wrapper">
     <div class="container">
         <h1>Welcome to Plumbeer!</h1>
-
-        <form class="form">
+        <div class="bton" id="register">Register</div>
+        <div class="bton" id="login">Login</div>
+        <form class="form" id="formulario" style="display:none">
             <input type="text" placeholder="Username">
             <input type="password" placeholder="Password">
             <button type="submit" id="login-button">Login</button>
@@ -31,3 +24,18 @@
         <li></li>
     </ul>
 </div>
+
+<script>
+
+    window.addEventListener(load, inicio, false);
+
+    function inicio(){
+        var login = document.getElementById("login");
+        login.addEventListener("click",mostrarLogin,false);
+    }
+
+    function mostrarLogin(){
+        var formLogin = document.getElementById();
+    }
+
+</script>
