--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,103 +1,6 @@
-<!-- CSS card flip -->
-<style>
-    @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-    .menu{
-        perspective: 900px;
-        margin-top:25%;
-        margin-left:45%;
-        width: 100px;
-        height: 100px;
-        cursor:pointer;
-        display: inline-block;
-        position: absolute;
-        background: #87CEFA;
-        top: 0;
-        left: 0;
-        border-radius: 50%;
-        box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
-        backface-visibility: hidden;
-    }
-
-    .esfera{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 30px;
-    }
-
-    .menu img{
-        margin-top:20%;
-        width:60px;
-        height:60px;
-    }
-
-    .card-container{
-        perspective: 900px;
-        margin-right: 20px;
-        width: 150px;
-        cursor:pointer;
-    }
-
-    .card{
-        position: relative;
-        width: 100px;
-        height: 100px;
-        transition: all 0.6s ease;
-        transform-style: preserve-3d;
-        cursor:pointer;
-        display: inline-block;
-    }
-
-    .front,.back{
-        position: absolute;
-        background: #87CEFA;
-        top: 0;
-        left: 0;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        color: white;
-        box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
-        backface-visibility: hidden;
-    }
-
-    .front{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 30px;
-    }
-
-    .back{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 18px;
-    }
-
-    .card-container:hover .card{
-        transform: rotateY(180deg);
-    }
-
-    .back{
-        transform: rotateY(180deg);
-    }
-
-    .card-container img{
-        width:60px;
-        height:60px;
-    }
-</style>
-<!-- endCSS -->
 <div ng-cloak>
     <div class="row">
-        <div class="menu">
-            <div class="esfera">
-                <img src="../../../menu.png"/>
-            </div>
-        </div>
-        <div class="card-container" class="user">
+        <div class="card-container" id="user">
             <div class="card" class="user">
                 <div class="front" class="user">
                     <img src="../../../profile.png"/>
@@ -145,16 +48,10 @@
                 <div class="back">Logout</div>
             </div>
         </div>
-
-        <div ng-controller="MainController">
-            <table border="1px" style="position:absolute; margin-left:500px; top:20%; display:none" id="tableProfiles">
-                <tr  ng-repeat="user in users">
-                    <td>{{user.login}}</td>
-                    <td>{{user.firstName}}</td>
-                    <td>{{user.lastName}}</td>
-                    <td>{{user.ciudad.nombre}}</td>
-                </tr>
-            </table>
+        <div class="menu" id="bmenu">
+            <div class="esfera">
+                <img src="../../../menu.png"/>
+            </div>
         </div>
     </div>
 </div>
