Nuevo favicon y titulo provisional

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -3,7 +3,7 @@
         <div class="card-container" id="user">
             <div class="card" class="user">
                 <div class="front" class="user">
-                    <img src="../../../profile.png"/>
+                    <img src="../../../IMAGENES/profile.png"/>
                 </div>
                 <div class="back" class="user">Profiles</div>
             </div>
@@ -11,7 +11,7 @@
         <div class="card-container" id="shop">
             <div class="card">
                 <div class="front">
-                    <img src="../../../shop.png"/>
+                    <img src="../../../IMAGENES/shop.png"/>
                 </div>
                 <div class="back">Shop</div>
             </div>
@@ -19,7 +19,7 @@
         <div class="card-container" id="com">
             <div class="card">
                 <div class="front">
-                    <img src="../../../community.png"/>
+                    <img src="../../../IMAGENES/community.png"/>
                 </div>
                 <div class="back">Community</div>
             </div>
@@ -27,7 +27,7 @@
         <div class="card-container" id="post">
             <div class="card">
                 <div class="front">
-                    <img src="../../../posts.png"/>
+                    <img src="../../../IMAGENES/posts.png"/>
                 </div>
                 <div class="back">Your Posts</div>
             </div>
@@ -35,7 +35,7 @@
         <div class="card-container" id="search">
             <div class="card">
                 <div class="front">
-                    <img src="../../../search.png"/>
+                    <img src="../../../IMAGENES/search.png"/>
                 </div>
                 <div class="back">Search</div>
             </div>
@@ -43,14 +43,14 @@
         <div class="card-container" id="logout">
             <div class="card">
                 <div class="front">
-                    <img src="../../../logout.png"/>
+                    <img src="../../../IMAGENES/logout.png"/>
                 </div>
                 <div class="back">Logout</div>
             </div>
         </div>
         <div class="menu" id="bmenu">
             <div class="esfera">
-                <img src="../../../menu.png"/>
+                <img src="../../../IMAGENES/menu.png"/>
             </div>
         </div>
     </div>
