--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,4 +1,7 @@
 <div ng-cloak>
+
+</div>
+<!--<div ng-cloak>
     <div class="row cartas" id="fila1">
         <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="user">
             <div class="card" class="user">
@@ -13,7 +16,7 @@
                 <div class="front">
                     <img src="../../../IMAGENES/shop.png"/>
                 </div>
-                <div class="back">Shop</div>
+                <a><div class="back">Shop</div></a>
             </div>
         </div>
         <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="com">
@@ -42,7 +45,7 @@
                 <div class="back">Search</div>
             </div>
         </div>
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="lout">
+        <div class="card-container col-xs-12 col-sm-12 col-md-12 col-lg-12" id="lout">
             <div class="card">
                 <div class="front">
                     <img src="../../../IMAGENES/logout.png"/>
@@ -51,9 +54,13 @@
             </div>
         </div>
             </div>
-       <!-- <div class="menu" id="bmenu">
+        <div class="menu" id="bmenu">
             <div class="esfera">
                 <img src="../../../IMAGENES/menu.png"/>
             </div>
-        </div>-->
+        </div>
+</div>-->
+<div>
+    <span class="glyphicon glyphicon-star" style="background-color:#4fc0de; color:white; text-align:center"></span>
+    <span class="glyphicon glyphicon-star" style="background-color:#4fc0de; color:yellow; text-align:center"></span>
 </div>
