--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,16 +18,224 @@
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
         <!-- endbuild -->
+        <link rel="stylesheet" href="CSS/load.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="JS/load.js"></script>
+
     </head>
     <body ng-app="plumbeerApp">
         <!--[if lt IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div id="carga"><!--<div class="loading-spinner"></div>-->
+            <div class="socket">
+                <div class="gel center-gel">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c1 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c2 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c3 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c4 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c5 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c6 r1">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+
+                <div class="gel c7 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+
+                <div class="gel c8 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c9 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c10 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c11 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c12 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c13 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c14 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c15 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c16 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c17 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c18 r2">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c19 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c20 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c21 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c22 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c23 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c24 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c25 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c26 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c28 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c29 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c30 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c31 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c32 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c33 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c34 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c35 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c36 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+                <div class="gel c37 r3">
+                    <div class="hex-brick h1"></div>
+                    <div class="hex-brick h2"></div>
+                    <div class="hex-brick h3"></div>
+                </div>
+
+            </div>
+        </div>
         <div ui-view="navbar" ng-cloak=""></div>
+            <!-- SIDEBAR -->
+            <!--<div class="row">
+               <table border="1px" style="margin-top: -20px; margin-left: 14px; height: 777px;">
+                   <tr><td><a ui-sref="settings">PROFILE</a></td></tr>
+                   <tr><td><a ui-sref="posts">POSTS</a></td></tr>
+                   <tr><td><a ui-sref="shop">SHOP</a></td></tr>
+                   <tr><td><a ui-sref="leader">LEADERBOARD</a></td></tr>
+                   <tr><td><a ui-sref="stats">STATS</a></td></tr>
+                   <tr><td><a ui-sref="help">HELP</a></td></tr>
+               </table>
+            </div>-->
         <div class="container">
             <div class="well" ui-view="content"></div>
-        </div>
 
+        </div>
+        <footer id="footer">Developed by Miguel Pérez Alonso</footer>
         <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -178,6 +386,24 @@
     <script src="scripts/app/entities/opinion/opinion-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/opinion/opinion-detail.controller.js"></script>
     <script src="scripts/components/entities/opinion/opinion.service.js"></script>
-    <!-- endbuild -->'
+    <script src="scripts/app/entities/votacion/votacion.js"></script>
+    <script src="scripts/app/entities/votacion/votacion.controller.js"></script>
+    <script src="scripts/app/entities/votacion/votacion-dialog.controller.js"></script>
+    <script src="scripts/app/entities/votacion/votacion-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/votacion/votacion-detail.controller.js"></script>
+    <script src="scripts/components/entities/votacion/votacion.service.js"></script>
+    <script src="scripts/app/entities/post/post.js"></script>
+    <script src="scripts/app/entities/post/post.controller.js"></script>
+    <script src="scripts/app/entities/post/post-dialog.controller.js"></script>
+    <script src="scripts/app/entities/post/post-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/post/post-detail.controller.js"></script>
+    <script src="scripts/components/entities/post/post.service.js"></script>
+    <script src="scripts/app/entities/voto_post/voto_post.js"></script>
+    <script src="scripts/app/entities/voto_post/voto_post.controller.js"></script>
+    <script src="scripts/app/entities/voto_post/voto_post-dialog.controller.js"></script>
+    <script src="scripts/app/entities/voto_post/voto_post-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/voto_post/voto_post-detail.controller.js"></script>
+    <script src="scripts/components/entities/voto_post/voto_post.service.js"></script>
+    <!-- endbuild -->
     </body>
     </html>
