--- a/src/main/webapp/scripts/app/account/settings/settings.html
+++ b/src/main/webapp/scripts/app/account/settings/settings.html
@@ -1,7 +1,8 @@
+<link rel="stylesheet" href="CSS/loginStyle.css">
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2 translate="settings.title" translate-values="{username: '{{settingsAccount.login}}'}">User settings for [<b>{{settingsAccount.login}}</b>]</h2>
+            <h2 translate="settings.title" translate-values="{username: '{{settingsAccount.login}}'}">Settings for user <b>{{settingsAccount.login}}</b></h2>
 
             <div class="alert alert-success" ng-show="success" translate="settings.messages.success">
                 <strong>Settings saved!</strong>
@@ -87,5 +88,4 @@
             </form>
         </div>
     </div>
-
 </div>
