--- a/src/main/webapp/scripts/app/entities/voto_post/voto_post-dialog.html
+++ b/src/main/webapp/scripts/app/entities/voto_post/voto_post-dialog.html
@@ -4,37 +4,36 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myVotacionLabel" translate="plumbeerApp.votacion.home.createOrEditLabel">Create or edit a Votacion</h4>
+        <h4 class="modal-title" id="myVoto_postLabel" translate="plumbeerApp.voto_post.home.createOrEditLabel">Create or edit a Voto_post</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
             <label for="id" translate="global.field.id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
-                    ng-model="votacion.id" readonly />
+                    ng-model="voto_post.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" translate="plumbeerApp.votacion.positivo" for="field_positivo">Positivo</label>
+            <label class="control-label" translate="plumbeerApp.voto_post.positivo" for="field_positivo">Positivo</label>
             <input type="checkbox" class="form-control" name="positivo" id="field_positivo"
-                    ng-model="votacion.positivo"
+                    ng-model="voto_post.positivo"
                      />
         </div>
         <div class="form-group">
-            <label class="control-label" translate="plumbeerApp.votacion.motivo" for="field_motivo">Motivo</label>
+            <label class="control-label" translate="plumbeerApp.voto_post.motivo" for="field_motivo">Motivo</label>
                 <textarea class="form-control" name="motivo" id="field_motivo"
-                    ng-model="votacion.motivo"  />
+                    ng-model="voto_post.motivo"  />
         </div>
 
         <div class="form-group">
-            <label translate="plumbeerApp.votacion.votante" for="field_votante">votante</label>
-            <div id="field_votante"></div>
-            <!--<select class="form-control" id="field_votante" name="votante" ng-model="votacion.votante" ng-options="user as user.firstName for user in users track by user.id">
+            <label translate="plumbeerApp.voto_post.post" for="field_post">post</label>
+            <select class="form-control" id="field_post" name="post" ng-model="voto_post.post" ng-options="post as post.id for post in posts track by post.id">
                 <option value=""></option>
-            </select>-->
+            </select>
         </div>
         <div class="form-group">
-            <label translate="plumbeerApp.votacion.votado" for="field_votado">votado</label>
-            <select class="form-control" id="field_votado" name="votado" ng-model="votacion.votado" ng-options="user as user.firstName for user in users track by user.id">
+            <label translate="plumbeerApp.voto_post.votante" for="field_votante">votante</label>
+            <select class="form-control" id="field_votante" name="votante" ng-model="voto_post.votante" ng-options="user as user.id for user in users track by user.id">
                 <option value=""></option>
             </select>
         </div>
