--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,66 +1,42 @@
 <div ng-cloak>
+    <div class="row">
+        <!--<div class="col-md-4">
+            <span class="hipster img-responsive img-rounded"></span>
+        </div>
+        <div class="col-md-8">
+            <h1 translate="main.title">Welcome, Java Hipster!</h1>
+            <p class="lead" translate="main.subtitle">This is your homepage</p>
 
-</div>
-<!--<div ng-cloak>
-    <div class="row cartas" id="fila1">
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="user">
-            <div class="card" class="user">
-                <div class="front" class="user">
-                    <img src="../../../IMAGENES/profile.png"/></a>
+            <div ng-switch="isAuthenticated()">
+                <div class="alert alert-success" ng-switch-when="true" translate="main.logged.message" translate-values="{username: '{{account.login}}'}">
+                    You are logged in as user "{{account.login}}".
                 </div>
-                <a ui-sref="settings"><div class="back" class="user">Profile</div></a>
-            </div>
-        </div>
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="shop">
-            <div class="card">
-                <div class="front">
-                    <img src="../../../IMAGENES/shop.png"/>
+
+                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.authenticated">
+                    If you want to <a class="alert-link" href="#/login">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
                 </div>
-                <a><div class="back">Shop</div></a>
-            </div>
-        </div>
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="com">
-            <div class="card">
-                <div class="front">
-                    <img src="../../../IMAGENES/community.png"/>
+
+                <div class="alert alert-warning" ng-switch-when="false" translate="global.messages.info.register">
+                    You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
                 </div>
-                <div class="back">Community</div>
             </div>
-        </div>
+
+            <p translate="main.question">
+                If you have any question on JHipster:
+            </p>
+
+            <ul>
+                <li><a href="http://jhipster.github.io/" target="_blank" translate="main.link.homepage">JHipster homepage</a></li>
+                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" translate="main.link.stackoverflow">JHipster on Stack Overflow</a></li>
+                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" translate="main.link.bugtracker">JHipster bug tracker</a></li>
+                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" translate="main.link.chat">JHipster public chat room</a></li>
+                <li><a href="https://twitter.com/java_hipster" target="_blank"  translate="main.link.contact">contact @java_hipster on Twitter</a></li>
+            </ul>
+
+            <p>
+                <span translate="main.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="main.github">Github</a>!
+            </p>
+        </div>-->
     </div>
-        <div class="row cartas" id="fila2">
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="post">
-            <div class="card">
-                <div class="front">
-                    <img src="../../../IMAGENES/posts.png"/>
-                </div>
-                <div class="back">Your Posts</div>
-            </div>
-        </div>
-        <div class="card-container col-xs-12 col-sm-12 col-md-4 col-lg-4" id="search">
-            <div class="card">
-                <div class="front">
-                    <img src="../../../IMAGENES/search.png"/>
-                </div>
-                <div class="back">Search</div>
-            </div>
-        </div>
-        <div class="card-container col-xs-12 col-sm-12 col-md-12 col-lg-12" id="lout">
-            <div class="card">
-                <div class="front">
-                    <img src="../../../IMAGENES/logout.png"/>
-                </div>
-                <div class="back">Sign out</div>
-            </div>
-        </div>
-            </div>
-        <div class="menu" id="bmenu">
-            <div class="esfera">
-                <img src="../../../IMAGENES/menu.png"/>
-            </div>
-        </div>
-</div>-->
-<div>
-    <span class="glyphicon glyphicon-star" style="background-color:#4fc0de; color:white; text-align:center"></span>
-    <span class="glyphicon glyphicon-star" style="background-color:#4fc0de; color:yellow; text-align:center"></span>
 </div>
+
