--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -404,6 +404,12 @@
     <script src="scripts/app/entities/voto_post/voto_post-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/voto_post/voto_post-detail.controller.js"></script>
     <script src="scripts/components/entities/voto_post/voto_post.service.js"></script>
+    <script src="scripts/app/entities/mensaje/mensaje.js"></script>
+    <script src="scripts/app/entities/mensaje/mensaje.controller.js"></script>
+    <script src="scripts/app/entities/mensaje/mensaje-dialog.controller.js"></script>
+    <script src="scripts/app/entities/mensaje/mensaje-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/mensaje/mensaje-detail.controller.js"></script>
+    <script src="scripts/components/entities/mensaje/mensaje.service.js"></script>
     <!-- endbuild -->
     </body>
     </html>
